# django-elearning

./: .env.dist  .gitignore  README.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  profile_urls.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: base_auth.html  dashboard.html  profile.html  profile_form.html  profile_photo.html
carts/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_cart_session_key_cart_updated_at.py
carts/templates/carts/: cart.html  checkout.html  empty_cart.html  order_completed.html
config/: settings.py  urls.py
courses/: admin.py  context_processors.py  error_handlers.py  forms.py  models.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_remove_course_is_free_course_price_status_and_more.py  0002_remove_course_language_delete_language.py
courses/templates/courses/: course_delete.html  course_detail.html  course_form.html  course_list.html  index.html
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: checkout.html  khalti_payment.html  order_completed.html  order_list.html
templates/: about.html  base.html  contact_us.html
templates/errors/: 403.html  404.html
templates/partials/: footer.html  header.html  messages.html  page_header.html
templates/partials/about/: countup.html  newsletter.html
templates/partials/form/: form_errors.html  search_form.html  search_form_mobile.html
(+24 files in other folders)
