[tool.poetry]
name = "django-elearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2,<5.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
black = "^24.4.2"
django-debug-toolbar = "^4.4.2"
django-extensions = "^3.2.3"
isort = "^5.13.2"
djhtml = "^3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
